# llm-telegram-bot

./: .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  deploy.yml
bot/: config.py
bot/clients/: gemini_client.py
bot/handlers/: gemini_handler.py  ollama.py
