[project]
name = "llm-telegram-bot"
version = "0.1.0"
description = "LLM-powered Telegram Bot"
authors = [
    {name = "Dzmitry Mishchanka"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot (>=21.10,<22.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
    "ollama (>=0.4.7,<0.5.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
